🐛 Fix "why-us" incorrect text alignment

--- a/src/styles/why-us.scss
+++ b/src/styles/why-us.scss
@@ -15,6 +15,7 @@
 
       width: 45%;
       margin: 0 0 40px 0;
+      text-align: center;
     }
 
     &_reason {
@@ -43,5 +44,6 @@
     @extend %typography-h2;
 
     margin: 0 0 40px 0;
+    text-align: center;
   }
 }
